--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -53,13 +53,21 @@ header{
     animation-duration: 0.3s;
     @include fade(0.4s);
     .logo{
-    position:relative;
-    left:1.3rem;
-    top:0rem;
     margin-top: 0;
+    top:0rem;
     @include fade(0.5s);
-    @media (#{$bp-larger-than-mobile}) {max-width: 42px;}
-    @media (#{$bp-larger-than-phablet}) {max-width: 42px;}
+    @media (#{$bp-larger-than-mobile}) {
+        max-width: 42px;
+        position:relative;
+        left:50%;
+        margin-left: -30px;
+        }
+    @media (#{$bp-larger-than-phablet}) {
+        max-width: 42px;
+        position:relative;
+        left:1.3rem;
+        margin-left: 0;
+        }
     @media (#{$bp-larger-than-tablet}) {max-width: 42px;}
     &:hover{
       opacity: 0.8;
@@ -118,7 +126,8 @@ header.smaller{
 /* COLOR WRAPS
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .color-wrap{
-  padding: 12rem 0;
+    @media (#{$bp-larger-than-mobile}) {padding: 4rem 0;}
+    @media (#{$bp-larger-than-tablet}) {padding: 12rem 0;}
   float:left;
   width: 100%;
   .wrap-title{
@@ -146,6 +155,23 @@ header.smaller{
 
 .color-wrap--yellow{
   background-color:$color__yellow;
+    .article{
+        border-top: 1px solid $color__black;
+        position:relative;
+        padding-top: 1rem;
+        padding-bottom: 1rem;
+        .link{text-align: right;}
+    }
+    a{color: $color__black;}
+    .showtitle {
+    margin-bottom: 1rem;
+    a{
+      color:$color__black;
+      &:hover{
+        color:$color__deep-purple--dj;
+      }
+    }
+  }
 }
 
 .color-wrap--railblue{
@@ -299,6 +325,12 @@ figcaption{position:relative;
 
 .home__cat__title{
     font-family: $font__serif;
+    text-transform: uppercase;
+    font-size: 1.3rem;
+    margin-bottom: 2rem;
+    display:block;
+    
+ 
 }
 
 .post__large--feat-fullscreen{
@@ -329,7 +361,7 @@ figcaption{position:relative;
 
 .post__large--excerpt{
   @media (#{$bp-larger-than-mobile}) {
-    padding: 2rem 2rem; 
+    padding: 4rem 2rem; 
     text-align: center;
     position: relative;
     top:0rem;
@@ -594,6 +626,23 @@ footer.foot{
 
 /* ADDITIONS
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+.mobile-nav{
+    @media (#{$bp-larger-than-mobile}) {display:block;}
+    @media (#{$bp-larger-than-tablet}) {display:none;}
+    width:100%;
+    padding:2rem 0;
+    background: $color__railred;
+    font-weight: 600;
+    text-transform: uppercase;
+    text-align: center;
+    font-family: $font__serif;
+    color:$color__background;
+    &:hover{
+        color: $color__railred;
+    }
+}
+
 .fade-in-element { 
   opacity: 0; 
 }
