--- a/css/main.css
+++ b/css/main.css
@@ -1083,28 +1083,19 @@ hr {
   .titles:hover {
     color: #cf4a37; }
 
+.wrap {
+  padding: 15px; }
+
 /*header section*/
 header {
   z-index: 30;
-  background: #231f20;
+  background: transparent;
   width: 100%;
   padding: 1rem;
   position: fixed;
   text-align: left;
-  top: 0;
+  top: 15px;
   /*drop the header*/
-  -moz-animation-name: dropHeader;
-  -moz-animation-iteration-count: 1;
-  -moz-animation-timing-function: ease-in-out;
-  -moz-animation-duration: 0.3s;
-  -webkit-animation-name: dropHeader;
-  -webkit-animation-iteration-count: 1;
-  -webkit-animation-timing-function: ease-in-out;
-  -webkit-animation-duration: 0.3s;
-  animation-name: dropHeader;
-  animation-iteration-count: 1;
-  animation-timing-function: ease-in-out;
-  animation-duration: 0.3s;
   -webkit-transition: all 0.4s;
   transition: all 0.4s; }
   @media (min-width: 320px) {
@@ -1163,23 +1154,8 @@ header {
         display: none; } }
 
 header.smaller {
-  height: 0rem;
-  margin-top: -20px; }
-  header.smaller .logo {
-    max-width: 0%;
-    opacity: 0;
-    position: relative;
-    top: 0rem; }
-  header.smaller .menu-btn {
-    display: none; }
-
-.first {
-  margin-top: 140px; }
-
-.logo-small {
-  width: 32px;
-  opacity: 1;
-  margin: 0 0 3rem 0; }
+  background: #231f20;
+  margin-top: -15px; }
 
 /* COLOR WRAPS
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -1332,9 +1308,7 @@ ul.podcast-covers {
     padding-top: 0rem;
     padding-bottom: 0rem;
     margin: 0;
-    overflow: visible; }
-    .post__large:first-child {
-      margin-top: 6rem; } }
+    overflow: visible; } }
 @media (min-width: 750px) {
   .post__large {
     height: 520px; } }
@@ -1345,9 +1319,7 @@ ul.podcast-covers {
     padding-top: 0rem;
     padding-bottom: 0rem;
     margin: 0;
-    overflow: hidden; }
-    .post__large:first-child {
-      margin-top: 0rem; } }
+    overflow: hidden; } }
 
 .post__large--feat {
   float: left;
@@ -1387,7 +1359,6 @@ ul.podcast-covers {
       height: 100%; } }
   .post__large--feat-fullscreen h1 {
     position: absolute;
-    display: block;
     background: rgba(35, 31, 32, 0.8);
     bottom: 0;
     right: 0rem;
@@ -1396,10 +1367,16 @@ ul.podcast-covers {
     text-align: left;
     color: #fffef9;
     font-family: ‘Courier New’, Courier, monospace; }
+    @media (min-width: 320px) {
+      .post__large--feat-fullscreen h1 {
+        display: none; } }
+    @media (min-width: 750px) {
+      .post__large--feat-fullscreen h1 {
+        display: block; } }
 
 @media (min-width: 320px) {
   .post__large--excerpt {
-    padding: 4rem 2rem;
+    padding: 2rem 2rem;
     text-align: center;
     position: relative;
     top: 0rem;
@@ -1677,19 +1654,6 @@ footer.foot {
   .mobile {
     display: none; } }
 
-::-webkit-scrollbar {
-  width: 15px; }
-
-::-webkit-scrollbar-track {
-  background-color: rgba(35, 31, 32, 0.8); }
-
-::-webkit-scrollbar-thumb {
-  background-color: #231f20;
-  opacity: 0.5; }
-
-::-webkit-scrollbar-thumb:hover {
-  background-color: #231f20; }
-
 /* Clearing
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 /* Self Clearing Goodness */
@@ -1781,6 +1745,38 @@ iframe {
     background-color: #cf4a37;
     color: white;
     border-bottom: 1px solid #cf4a37; }
+
+.body-border {
+  position: fixed;
+  z-index: 29;
+  background-color: #231f20; }
+  @media (min-width: 320px) {
+    .body-border {
+      display: none; } }
+  @media (min-width: 750px) {
+    .body-border {
+      display: block; } }
+  .body-border--top {
+    top: 0;
+    width: 100%;
+    height: 15px; }
+  .body-border--right {
+    right: 0;
+    height: 100%;
+    width: 15px; }
+  .body-border--left {
+    left: 0;
+    height: 100%;
+    width: 15px; }
+  .body-border--bottom {
+    bottom: 0;
+    width: 100%;
+    height: 15px; }
+
+.logo-small {
+  width: 32px;
+  opacity: 1;
+  margin: 0 0 3rem 0; }
 
 
 
