--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -27,30 +27,34 @@ hr {
          color:$color__railred;
         }
 }
+
+.wrap{
+    padding:15px;
+}
 /*header section*/
 header{
     z-index: 30;
-    background: $color__black;
+    background: transparent;
     width: 100%;
     padding: 1rem;
     position: fixed;
     text-align: left;
-    top: 0;
+    top:15px;
     @media (#{$bp-larger-than-mobile}) {height: 4.8rem;}
     @media (#{$bp-larger-than-tablet}) {height: 5rem;}
     /*drop the header*/
-    -moz-animation-name: dropHeader;
-    -moz-animation-iteration-count: 1;
-    -moz-animation-timing-function: ease-in-out;
-    -moz-animation-duration: 0.3s;
-    -webkit-animation-name: dropHeader;
-    -webkit-animation-iteration-count: 1;
-    -webkit-animation-timing-function: ease-in-out;
-    -webkit-animation-duration: 0.3s;
-    animation-name: dropHeader;
-    animation-iteration-count: 1;
-    animation-timing-function: ease-in-out;
-    animation-duration: 0.3s;
+//    -moz-animation-name: dropHeader;
+//    -moz-animation-iteration-count: 1;
+//    -moz-animation-timing-function: ease-in-out;
+//    -moz-animation-duration: 0.3s;
+//    -webkit-animation-name: dropHeader;
+//    -webkit-animation-iteration-count: 1;
+//    -webkit-animation-timing-function: ease-in-out;
+//    -webkit-animation-duration: 0.3s;
+//    animation-name: dropHeader;
+//    animation-iteration-count: 1;
+//    animation-timing-function: ease-in-out;
+//    animation-duration: 0.3s;
     @include fade(0.4s);
     .logo{
     margin-top: 0;
@@ -100,26 +104,24 @@ header{
     }
 }
 header.smaller{
-  height: 0rem;
-  margin-top: -20px;
+    background:$color--black;
+    margin-top: -15px;
+//  height: 0rem;
+
   .logo{
-    max-width:0%;
-    opacity: 0;
-    position: relative;
-    top:0rem;}
-    .menu-btn{
-      display:none;
+//    max-width:0%;
+//    opacity: 0;
+//    position: relative;
+//    top:0rem;}
+//    .menu-btn{
+//      display:none;
     }
 }
 .first{
-    margin-top: 140px;
+//    margin-top: 140px;
   }
 
- .logo-small{
-  width: 32px;
-  opacity: 1;
-  margin: 0 0 3rem 0;
- } 
+
 
 
 
@@ -295,9 +297,7 @@ figcaption{position:relative;
     padding-bottom: 0rem;
     margin: 0;
     overflow:visible;
-    &:first-child {
-      margin-top: 6rem;
-    }
+
   }
   @media (#{$bp-larger-than-tablet}) {height: 520px;}
 
@@ -308,9 +308,7 @@ figcaption{position:relative;
     padding-bottom: 0rem;
     margin: 0;
     overflow:hidden;
-    &:first-child {
-      margin-top: 0rem;
-    }
+
     }
   }
 .post__large--feat{
@@ -342,8 +340,9 @@ figcaption{position:relative;
   background-color:$color__background;
   position: relative;
     h1{
+        @media (#{$bp-larger-than-mobile}) {display:none;}
+        @media (#{$bp-larger-than-tablet}) {display:block;}
         position:absolute;
-        display:block;
         background:$color__black--80;
         bottom: 0;
         right:0rem;
@@ -361,7 +360,7 @@ figcaption{position:relative;
 
 .post__large--excerpt{
   @media (#{$bp-larger-than-mobile}) {
-    padding: 4rem 2rem; 
+    padding: 2rem 2rem; 
     text-align: center;
     position: relative;
     top:0rem;
@@ -662,19 +661,19 @@ footer.foot{
 
 // Scrollbar
 //––––––––––––––––––––––––––––––––––––––––––––––––––
-::-webkit-scrollbar {
-    width: 15px;
-}
-::-webkit-scrollbar-track {
-    background-color:$color__black--80;
-}
-::-webkit-scrollbar-thumb {
-    background-color: $color__black;
-    opacity: 0.5;
-}
-::-webkit-scrollbar-thumb:hover {
-    background-color: $color__black;
-} 
+//::-webkit-scrollbar {
+//    width: 15px;
+//}
+//::-webkit-scrollbar-track {
+//    background-color:$color__black--80;
+//}
+//::-webkit-scrollbar-thumb {
+//    background-color: $color__black;
+//    opacity: 0.5;
+//}
+//::-webkit-scrollbar-thumb:hover {
+//    background-color: $color__black;
+//} 
 
 /* Clearing
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -773,3 +772,22 @@ footer.foot{
     }
 }
 
+
+
+.body-border{
+    @media (#{$bp-larger-than-mobile}) {display:none;}
+    @media (#{$bp-larger-than-tablet}) {display:block;}
+    position:fixed;z-index:29;
+    background-color:$color__black;
+    &--top{top:0; width:100%; height:15px;}
+    &--right{right:0; height:100%; width:15px;}
+    &--left{left:0; height:100%; width:15px;}
+    &--bottom{bottom:0; width:100%; height:15px;}
+}
+
+
+ .logo-small{
+  width: 32px;
+  opacity: 1;
+  margin: 0 0 3rem 0;
+ }
